@@ -864,7 +864,7 @@ public class SQLServerDataSource implements ISQLServerDataSource, DataSource, ja
             int propValue) {
         if (loggerExternal.isLoggable(java.util.logging.Level.FINER))
             loggerExternal.entering(getClassNameLogging(), "set" + propKey, propValue);
-        props.setProperty(propKey, new Integer(propValue).toString());
+        props.setProperty(propKey, Integer.valueOf(propValue).toString());
         loggerExternal.exiting(getClassNameLogging(), "set" + propKey);
     }
 
@@ -1003,7 +1003,13 @@ public class SQLServerDataSource implements ISQLServerDataSource, DataSource, ja
         // Create new connection and connect.
         if (dsLogger.isLoggable(Level.FINER))
             dsLogger.finer(toString() + " Begin create new connection.");
-        SQLServerConnection result = new SQLServerConnection(toString());
+        SQLServerConnection result = null;
+        if (Util.use43Wrapper()) {
+            result = new SQLServerConnection43(toString());
+        }
+        else {
+            result = new SQLServerConnection(toString());
+        }
         result.connect(mergedProps, pooledConnection);
         if (dsLogger.isLoggable(Level.FINER))
             dsLogger.finer(toString() + " End create new connection " + result.toString());
@@ -1104,6 +1110,7 @@ public class SQLServerDataSource implements ISQLServerDataSource, DataSource, ja
         loggerExternal.exiting(getClassNameLogging(), "unwrap", t);
         return t;
     }
+
 
     // Returns unique id for each DataSource instance.
     private static int nextDataSourceID() {
