@@ -347,7 +347,7 @@ enum SQLServerDriverBooleanProperty
     MULTI_SUBNET_FAILOVER                     ("multiSubnetFailover",                       false),
     SERVER_NAME_AS_ACE                        ("serverNameAsACE",                           false),
     SEND_STRING_PARAMETERS_AS_UNICODE         ("sendStringParametersAsUnicode",             true),
-    SEND_TIME_AS_DATETIME                     ("sendTimeAsDatetime",                        true),
+    SEND_TIME_AS_DATETIME                     ("sendTimeAsDatetime",                        false),
     TRANSPARENT_NETWORK_IP_RESOLUTION         ("TransparentNetworkIPResolution",            true),
     TRUST_SERVER_CERTIFICATE                  ("trustServerCertificate",                    false),
     XOPEN_STATES                              ("xopenStates",                               false),
@@ -474,7 +474,9 @@ public final class SQLServerDriver implements java.sql.Driver {
             java.sql.DriverManager.registerDriver(new SQLServerDriver());
         }
         catch (SQLException e) {
-            e.printStackTrace();
+            if (drLogger.isLoggable(Level.FINER) && Util.IsActivityTraceOn()) {
+                drLogger.finer("Error registering driver: " + e);
+            }
         }
     }
 
@@ -612,7 +614,12 @@ public final class SQLServerDriver implements java.sql.Driver {
         // Merge connectProperties (from URL) and supplied properties from user.
         Properties connectProperties = parseAndMergeProperties(Url, suppliedProperties);
         if (connectProperties != null) {
-            result = new SQLServerConnection(toString());
+            if (Util.use43Wrapper()) {
+                result = new SQLServerConnection43(toString());
+            }
+            else {
+                result = new SQLServerConnection(toString());
+            }
             result.connect(connectProperties, null);
         }
         loggerExternal.exiting(getClassNameLogging(), "connect", result);
@@ -632,7 +639,7 @@ public final class SQLServerDriver implements java.sql.Driver {
         // put the user properties into the connect properties
         int nTimeout = DriverManager.getLoginTimeout();
         if (nTimeout > 0) {
-            connectProperties.put(SQLServerDriverIntProperty.LOGIN_TIMEOUT.toString(), new Integer(nTimeout).toString());
+            connectProperties.put(SQLServerDriverIntProperty.LOGIN_TIMEOUT.toString(), Integer.valueOf(nTimeout).toString());
         }
 
         // Merge connectProperties (from URL) and supplied properties from user.
